# fpga_embedded_vision

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  README.txt
apu/apps/pcie_lib/: README.md
apu/apps/pcie_transcode/: README.txt
apu/apps/vcu_apm_lib/: .cproject  .project  README.md
apu/apps/vcu_gst_app/: .cproject  .project
apu/apps/vcu_qt/: qml.qrc  vcu_qt.pro
apu/apps/vcu_video_lib/: .project
avnet/IP/avnet_hdmi_out/: component.xml
avnet/IP/onsemi_vita_cam/: component.xml
avnet/IP/onsemi_vita_spi/: component.xml
avnet/Projects/fmchc_python1300c/software/sw_repository/sw_services/fmc_hdmi_cam_sw_v2_1/src/: CMakeLists.txt  fmc_hdmi_cam.c  fmc_hdmi_cam.h
avnet/Projects/fmchc_python1300c/software/sw_repository/sw_services/fmc_iic_sw_v2_3/src/: CMakeLists.txt  fmc_iic.h  fmc_iic_axi.c  fmc_iic_sg.c
avnet/Projects/fmchc_python1300c/software/sw_repository/sw_services/onsemi_python_sw_v3_3/src/: CMakeLists.txt  Makefile  onsemi_python_sw.c
avnet/Projects/fmchc_python1300c/software/sw_repository/sw_services/onsemi_python_sw_v3_3/src/include/: onsemi_python_sw.h
doc/: Boards.md  Camera_and_adaptors.md  FMC_Boards.xlsm  FMC_Boards.xlsx  IMX219_RPI_KV260_DP.md  IMX219_RPI_MIPI0_ME_ST1_XU6_2CG_DP.md  KV260.md  LI-IMX274-FMC_ZCU104.md  ME_ST1_XU6_2CG.md  MYD-C7Z020.md  PYTHON1300_FMC_MYD-C7Z020.md  PYTHON1300_FMC_PicoZed.md  PYTHON1300_FMC_ZCU104.md  PYTHON1300_FMC_ZYNQ_DEV.md  PicoZed.md  RPI_MIPI_KV260_DP.md  ZCU104.md  ZYNQ_DEV.md
edid-decode/: edid-decode-export.h  edid-decode.cpp
enclustra/: Makefile
enclustra/scripts/: Mercury_XU6_ST1_bd.tcl  create_project.tcl  run.tcl  settings.tcl  vitis_app.py  vitis_app.tcl  vitis_platform.tcl
enclustra/src/: Mercury_XU6_ST1.tcl  Mercury_XU6_ST1.vhd  Mercury_XU6_timing.tcl  opsero_Mercury_XU6_ST1.tcl  opsero_Mercury_XU6_ST1.vhd
fru/: fru-parse.c  fru.c  fru.h  ipmi-fru.h  ipmi.c  ipmi.h  operating-system.c
host_x86/host_package/: README.md
host_x86/host_package/libxdma/: libxdma.h
host_x86/host_package/tools/: pcie_host_app.c
host_x86/host_package/xdma/: cdev_ctrl.c  (+5 more)
kv260/: Makefile
kv260/fpga/: Makefile
myir/: MYIR.tcl  Makefile  bd.tcl  fmchc_python1300c_sdk.tcl  myir7020_fmc1300c.tcl  myir7020_fmchc_python1300c.tcl  myir7020_fmchc_python1300c.xdc  run.tcl  utils.tcl  vitis_app.py  vitis_app.tcl  vitis_platform.tcl  zynqdev_fmchc_python1300c.xdc
pl/: Readme.txt
pl/constrs/: hdmi_plddr.xdc  hdmi_plddr.xdc~  vcu_audio.xdc  vcu_hdmirx.xdc  vcu_pcie.xdc  vcu_sditx_async.xdc  vcu_sditx_timing.xdc  vcu_sdx.xdc  zcu104_vcu_trd_async.xdc
pl/scripts/: bd_layout.tcl  hdmi_plddr_proj.tcl  vcu_10g_proj.tcl  vcu_hdmirx_bd.tcl  vcu_hdmirx_proj.tcl  vcu_hdmitx_bd.tcl  vcu_hdmitx_proj.tcl  vcu_sdirx_bd.tcl  vcu_sdirx_proj.tcl  vcu_sdirxtx_bd.tcl  vcu_sdirxtx_proj.tcl  vcu_sditx_proj.tcl  vcu_sdx_bd.tcl  vcu_sdx_proj.tcl  vcu_trd_proj.tcl  zcu104_vcu_trd_bd.tcl
scrips/: zcu104_fmchc_python1300c.tcl  zcu104_fmchc_python1300c.xdc  zcu104_vcu_trd_bd.tcl  zcu104_vcu_trd_proj.tcl  zcu104_vcu_trd_ps.tcl
scripts/: 0001-disable-NAND-QSPI-and-Secure-boot-to-save-fsbl-size.patch  som_bootmode.tcl  zcu104_fmchc_python1300_ps.tcl  zcu104_fmchc_python1300c.tcl  zcu104_fmchc_python1300c_spi.tcl  zcu104_vcu_trd_bd.tcl  zcu104_vcu_trd_proj.tcl
(+341 files in other folders)
